<resources>
    <string name="app_name">Sitio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sitio</string>
    <string name="nav_header_subtitle">Gerenciar Recursos</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_title">Recursos</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_abelhas">Abelhas</string>
    <string name="menu_arvores">Árvores</string>
    <string name="menu_ferramentas">Ferramentas</string>
</resources>
