<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_abelhas">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.julio.sitio.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.julio.sitio.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.julio.sitio.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.julio.sitio.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.julio.sitio.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.julio.sitio.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_abelhas"
        android:name="com.julio.sitio.ui.abelhas.AbelhasFragment"
        android:label="@string/menu_abelhas"
        tools:layout="@layout/fragment_abelhas" />

    <fragment
        android:id="@+id/nav_arvores"
        android:name="com.julio.sitio.ui.arvores.ArvoresFragment"
        android:label="@string/menu_arvores"
        tools:layout="@layout/fragment_arvores" />

    <fragment
        android:id="@+id/nav_ferramentas"
        android:name="com.julio.sitio.ui.ferramentas.FerramentasFragment"
        android:label="@string/menu_ferramentas"
        tools:layout="@layout/fragment_ferramentas" />
</navigation>